--- a/index.html
+++ b/index.html
@@ -56,8 +56,20 @@
                 </div>
             </div>
         </main>
+
+        <footer class="footer">
+            <div class="footer-content">
+                <p class="footer-tagline">Delivering messages across the digital void</p>
+                <div class="footer-links">
+                    <span class="footer-item">🔒 Secure</span>
+                    <span class="footer-item">⚡ Fast</span>
+                    <span class="footer-item">🤐 Discreet</span>
+                </div>
+                <p class="footer-copy">© 2025 DigitalPostman. Your secrets, delivered.</p>
+            </div>
+        </footer>
     </div>
-    
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
