--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1 class="logo">DigitalPostman</h1>
+            <h1 class="logo">Digital Postman</h1>
         </header>
         
         <main>
@@ -41,6 +41,12 @@
                         <option value="anonymous">Stay Anonymous</option>
                         <option value="include-name">Include My Name</option>
                     </select>
+                </div>
+
+                <div class="form-group name-field hidden" id="nameField">
+                    <label for="userName">Your Name</label>
+                    <input type="text" id="userName" name="userName" placeholder="Enter your name">
+                    <small>This will be included with your message</small>
                 </div>
                 
                 <p class="disclaimer">No hate, threats, or illegal stuff. We're petty, not criminals.</p>
