--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 
                 <div class="form-group">
                     <label for="message">Your Message</label>
-                    <textarea id="message" name="message" placeholder="What do you want to say?" required></textarea>
+                    <textarea id="message" name="message" placeholder="Type your message here.." required></textarea>
                 </div>
                 
                 <div class="form-group">
