--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div id="confirmation" class="confirmation hidden">
                 <div class="confirmation-content">
                     <h2>✓ Message Queued</h2>
-                    <p>Thanks, Postman's on it. Check your email for the invoice!</p>
+                    <p>Thanks, Postman's on it. Check your email for the invoice! (It can take a few hours, Thank you for your patience.)</p>
                     <button id="sendAnother" class="send-another-btn">Send Another</button>
                 </div>
             </div>
