--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DigitalPostman</title>
+    <meta name="description" content="Blocked? Ghosted? Let DramaPigeon deliver your message for just $1 – anonymously or not. We’re the pigeons you need." />
+    <meta name="robots" content="index, follow" />
+    <title>DramaPigeon | Send Messages Anonymously</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1 class="logo">Digital Postman</h1>
+            <h1 class="logo">Drama Pigeon</h1>
         </header>
         
         <main>
@@ -71,7 +73,7 @@
                     <span class="footer-item">⚡ Fast</span>
                     <span class="footer-item">🤐 Discreet</span>
                 </div>
-                <p class="footer-copy">© 2025 DigitalPostman. Your secrets, delivered.</p>
+                <p class="footer-copy">© 2025 DramaPigeon. Your secrets, delivered.</p>
             </div>
         </footer>
     </div>
