--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Blocked? Ghosted? Let DramaPigeon deliver your message for just $1 – anonymously or not. We’re the pigeons you need." />
     <meta name="robots" content="index, follow" />
     <title>DramaPigeon | Send Messages Anonymously</title>
+    <link rel="icon" href="DigitalPostman Logo.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
