--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         
         <main>
             <div class="hero-section">
-                <p class="tagline">Say what you can't. We'll deliver your message — blocked, ghosted, or just too scared? We got you. <span class="price">Just $1 per message.</span></p>
+                <p class="tagline">Say what you can't. We'll deliver your message — blocked, ghosted, or just too scared? We got you. <span class="price">$5 per message.</span>
+  <span class="free-offer">Free Trials till October</span></p>
             </div>
             
             <form id="messageForm" class="message-form">
